Place pdf and img in resources folder:

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Left side -->
   <div class="left">
     <div class="centered">
-      <img src="img.jpg" alt="Picture of my face">
+      <img src="Resources/img.jpg" alt="Picture of my face">
       <div class = "name">Ming Hao Chen</div>
       <p> I am a third year Computer Science Student studying at the University of Windsor, currently I'm turning coffe into code.  My goal is to become a software developer.</p>
       <h3>Contact Info</h3>
@@ -32,7 +32,7 @@
           </a>
         </i>
         <i class = "icon far fa-file-pdf"></i>
-        <a href="resume.pdf" target= "_blank" style = "text-decoration: none"> Resume</a>
+        <a href="Resources/resume.pdf" target= "_blank" style = "text-decoration: none"> Resume</a>
       </div>
 
     </div>
