Fix broken link for resume

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </a>
         </i>
         <i class = "icon far fa-file-pdf"></i>
-        <a href="Resources/resume.pdf" target= "_blank" style = "text-decoration: none"> Resume</a>
+        <a href="http://mingchen.ca/Resources/Resume.pdf" target= "_blank" style = "text-decoration: none"> Resume </a>
       </div>
 
     </div>
