--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- Left side -->
       <div class="left">
         <div class="centered">
-          <img src="Resources/img.jpg" alt="Picture of my face" />
+          <img src="Resources/image.jpg" alt="Picture of my face" />
           <div class="name">Ming Hao Chen</div>
           <p>
             I am a fourth year Computer Science Student studying at the
