--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             >
             </a>
           </div>
-          <div class="cardContainer">
+          <div class="cardcontainer">
             <div class="name">Meetingmaker</div>
             <ul>
               <li>
